--- a/006_Coordinate_Systems/Coordinate_Systems/Coordinate_Systems.vcxproj.filters
+++ b/006_Coordinate_Systems/Coordinate_Systems/Coordinate_Systems.vcxproj.filters
@@ -4,21 +4,30 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Lib\glad.c" />
     <ClCompile Include="CoordinateSystemsApplication.cpp" />
-    <ClCompile Include="RotatingModel.cpp" />
     <ClCompile Include="Engine\Mesh.cpp" />
     <ClCompile Include="Engine\Model.cpp" />
     <ClCompile Include="Engine\OpenGLApplication.cpp" />
     <ClCompile Include="Engine\Shader.cpp" />
     <ClCompile Include="Engine\Texture.cpp" />
+    <ClCompile Include="Lib\imgui\imgui.cpp" />
+    <ClCompile Include="Lib\imgui\imgui_demo.cpp" />
+    <ClCompile Include="Lib\imgui\imgui_draw.cpp" />
+    <ClCompile Include="Lib\imgui\imgui_impl_glfw_gl3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lib\stb_image.h" />
     <ClInclude Include="CoordinateSystemsApplication.h" />
-    <ClInclude Include="RotatingModel.h" />
     <ClInclude Include="Engine\Mesh.h" />
     <ClInclude Include="Engine\Model.h" />
     <ClInclude Include="Engine\OpenGLApplication.h" />
     <ClInclude Include="Engine\Shader.h" />
     <ClInclude Include="Engine\Texture.h" />
+    <ClInclude Include="Lib\imgui\imconfig.h" />
+    <ClInclude Include="Lib\imgui\imgui.h" />
+    <ClInclude Include="Lib\imgui\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="Lib\imgui\imgui_internal.h" />
+    <ClInclude Include="Lib\imgui\stb_rect_pack.h" />
+    <ClInclude Include="Lib\imgui\stb_textedit.h" />
+    <ClInclude Include="Lib\imgui\stb_truetype.h" />
   </ItemGroup>
 </Project>
