--- a/008_ModelLoading/ModelLoading/ModelLoading.vcxproj
+++ b/008_ModelLoading/ModelLoading/ModelLoading.vcxproj
@@ -122,9 +122,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CameraController.cpp" />
+    <ClCompile Include="Engine\AssetsManager.cpp" />
     <ClCompile Include="Engine\Camera.cpp" />
     <ClCompile Include="Engine\Mesh.cpp" />
-    <ClCompile Include="Engine\Model.cpp" />
+    <ClCompile Include="Engine\AssimpModel.cpp" />
     <ClCompile Include="Engine\OpenGLApplication.cpp" />
     <ClCompile Include="Engine\Shader.cpp" />
     <ClCompile Include="Engine\Texture.cpp" />
@@ -138,9 +139,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraController.h" />
+    <ClInclude Include="Engine\AssetsManager.h" />
     <ClInclude Include="Engine\Camera.h" />
+    <ClInclude Include="Engine\Engine.h" />
+    <ClInclude Include="Engine\IModel.h" />
     <ClInclude Include="Engine\Mesh.h" />
-    <ClInclude Include="Engine\Model.h" />
+    <ClInclude Include="Engine\AssimpModel.h" />
     <ClInclude Include="Engine\OpenGLApplication.h" />
     <ClInclude Include="Engine\Shader.h" />
     <ClInclude Include="Engine\Texture.h" />
