--- a/008_ModelLoading/ModelLoading/ModelLoading.vcxproj
+++ b/008_ModelLoading/ModelLoading/ModelLoading.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Engine\Camera.cpp" />
     <ClCompile Include="Engine\Mesh.cpp" />
     <ClCompile Include="Engine\AssimpModel.cpp" />
+    <ClCompile Include="Engine\Model.cpp" />
     <ClCompile Include="Engine\OpenGLApplication.cpp" />
     <ClCompile Include="Engine\Shader.cpp" />
     <ClCompile Include="Engine\Texture.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Engine\IModel.h" />
     <ClInclude Include="Engine\Mesh.h" />
     <ClInclude Include="Engine\AssimpModel.h" />
+    <ClInclude Include="Engine\Model.h" />
     <ClInclude Include="Engine\OpenGLApplication.h" />
     <ClInclude Include="Engine\Shader.h" />
     <ClInclude Include="Engine\Texture.h" />
