--- a/008_ModelLoading/ModelLoading/ModelLoading.vcxproj.filters
+++ b/008_ModelLoading/ModelLoading/ModelLoading.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="CameraController.cpp" />
     <ClCompile Include="Engine\AssimpModel.cpp" />
     <ClCompile Include="Engine\AssetsManager.cpp" />
+    <ClCompile Include="Engine\Model.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraController.h" />
@@ -37,5 +38,6 @@
     <ClInclude Include="Engine\IModel.h" />
     <ClInclude Include="Engine\AssetsManager.h" />
     <ClInclude Include="Engine\Engine.h" />
+    <ClInclude Include="Engine\Model.h" />
   </ItemGroup>
 </Project>
